parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> initial
Rule 1     initial -> comando
Rule 2     initial -> assign
Rule 3     initial -> declare_var
Rule 4     comando -> ESCREVE lista_strings FIM
Rule 5     lista_strings -> lista_strings SEPARADOR E
Rule 6     lista_strings -> lista_strings SEPARADOR NUM
Rule 7     lista_strings -> lista_strings SEPARADOR STRING
Rule 8     E -> E + E
Rule 9     E -> E - E
Rule 10    E -> E * E
Rule 11    lista_strings -> STRING
Rule 12    lista_strings -> NUM
Rule 13    lista_strings -> E
Rule 14    E -> - E
Rule 15    E -> ( E )
Rule 16    E -> NUM
Rule 17    E -> VARID
Rule 18    initial -> PARA VARID EM RANGE FAZER INST FIMPARA FIM
Rule 19    INST -> initial
Rule 20    declare_var -> VAR VARID FIM
Rule 21    assign -> VAR VARID = E FIM

Terminals, with rules where they appear

(                    : 15
)                    : 15
*                    : 10
+                    : 8
-                    : 9 14
=                    : 21
EM                   : 18
ESCREVE              : 4
FAZER                : 18
FIM                  : 4 18 20 21
FIMPARA              : 18
NUM                  : 6 12 16
PARA                 : 18
RANGE                : 18
SEPARADOR            : 5 6 7
STRING               : 7 11
VAR                  : 20 21
VARID                : 17 18 20 21
error                : 

Nonterminals, with rules where they appear

E                    : 5 8 8 9 9 10 10 13 14 15 21
INST                 : 18
assign               : 2
comando              : 1
declare_var          : 3
initial              : 19 0
lista_strings        : 4 5 6 7

Parsing method: LALR

state 0

    (0) S' -> . initial
    (1) initial -> . comando
    (2) initial -> . assign
    (3) initial -> . declare_var
    (18) initial -> . PARA VARID EM RANGE FAZER INST FIMPARA FIM
    (4) comando -> . ESCREVE lista_strings FIM
    (21) assign -> . VAR VARID = E FIM
    (20) declare_var -> . VAR VARID FIM

    PARA            shift and go to state 5
    ESCREVE         shift and go to state 6
    VAR             shift and go to state 7

    initial                        shift and go to state 1
    comando                        shift and go to state 2
    assign                         shift and go to state 3
    declare_var                    shift and go to state 4

state 1

    (0) S' -> initial .



state 2

    (1) initial -> comando .

    $end            reduce using rule 1 (initial -> comando .)
    FIMPARA         reduce using rule 1 (initial -> comando .)


state 3

    (2) initial -> assign .

    $end            reduce using rule 2 (initial -> assign .)
    FIMPARA         reduce using rule 2 (initial -> assign .)


state 4

    (3) initial -> declare_var .

    $end            reduce using rule 3 (initial -> declare_var .)
    FIMPARA         reduce using rule 3 (initial -> declare_var .)


state 5

    (18) initial -> PARA . VARID EM RANGE FAZER INST FIMPARA FIM

    VARID           shift and go to state 8


state 6

    (4) comando -> ESCREVE . lista_strings FIM
    (5) lista_strings -> . lista_strings SEPARADOR E
    (6) lista_strings -> . lista_strings SEPARADOR NUM
    (7) lista_strings -> . lista_strings SEPARADOR STRING
    (11) lista_strings -> . STRING
    (12) lista_strings -> . NUM
    (13) lista_strings -> . E
    (8) E -> . E + E
    (9) E -> . E - E
    (10) E -> . E * E
    (14) E -> . - E
    (15) E -> . ( E )
    (16) E -> . NUM
    (17) E -> . VARID

    STRING          shift and go to state 12
    NUM             shift and go to state 11
    -               shift and go to state 13
    (               shift and go to state 14
    VARID           shift and go to state 15

    lista_strings                  shift and go to state 9
    E                              shift and go to state 10

state 7

    (21) assign -> VAR . VARID = E FIM
    (20) declare_var -> VAR . VARID FIM

    VARID           shift and go to state 16


state 8

    (18) initial -> PARA VARID . EM RANGE FAZER INST FIMPARA FIM

    EM              shift and go to state 17


state 9

    (4) comando -> ESCREVE lista_strings . FIM
    (5) lista_strings -> lista_strings . SEPARADOR E
    (6) lista_strings -> lista_strings . SEPARADOR NUM
    (7) lista_strings -> lista_strings . SEPARADOR STRING

    FIM             shift and go to state 18
    SEPARADOR       shift and go to state 19


state 10

    (13) lista_strings -> E .
    (8) E -> E . + E
    (9) E -> E . - E
    (10) E -> E . * E

    FIM             reduce using rule 13 (lista_strings -> E .)
    SEPARADOR       reduce using rule 13 (lista_strings -> E .)
    +               shift and go to state 20
    -               shift and go to state 21
    *               shift and go to state 22


state 11

    (12) lista_strings -> NUM .
    (16) E -> NUM .

  ! reduce/reduce conflict for FIM resolved using rule 12 (lista_strings -> NUM .)
  ! reduce/reduce conflict for SEPARADOR resolved using rule 12 (lista_strings -> NUM .)
    FIM             reduce using rule 12 (lista_strings -> NUM .)
    SEPARADOR       reduce using rule 12 (lista_strings -> NUM .)
    +               reduce using rule 16 (E -> NUM .)
    -               reduce using rule 16 (E -> NUM .)
    *               reduce using rule 16 (E -> NUM .)

  ! FIM             [ reduce using rule 16 (E -> NUM .) ]
  ! SEPARADOR       [ reduce using rule 16 (E -> NUM .) ]


state 12

    (11) lista_strings -> STRING .

    FIM             reduce using rule 11 (lista_strings -> STRING .)
    SEPARADOR       reduce using rule 11 (lista_strings -> STRING .)


state 13

    (14) E -> - . E
    (8) E -> . E + E
    (9) E -> . E - E
    (10) E -> . E * E
    (14) E -> . - E
    (15) E -> . ( E )
    (16) E -> . NUM
    (17) E -> . VARID

    -               shift and go to state 13
    (               shift and go to state 14
    NUM             shift and go to state 24
    VARID           shift and go to state 15

    E                              shift and go to state 23

state 14

    (15) E -> ( . E )
    (8) E -> . E + E
    (9) E -> . E - E
    (10) E -> . E * E
    (14) E -> . - E
    (15) E -> . ( E )
    (16) E -> . NUM
    (17) E -> . VARID

    -               shift and go to state 13
    (               shift and go to state 14
    NUM             shift and go to state 24
    VARID           shift and go to state 15

    E                              shift and go to state 25

state 15

    (17) E -> VARID .

    +               reduce using rule 17 (E -> VARID .)
    -               reduce using rule 17 (E -> VARID .)
    *               reduce using rule 17 (E -> VARID .)
    FIM             reduce using rule 17 (E -> VARID .)
    SEPARADOR       reduce using rule 17 (E -> VARID .)
    )               reduce using rule 17 (E -> VARID .)


state 16

    (21) assign -> VAR VARID . = E FIM
    (20) declare_var -> VAR VARID . FIM

    =               shift and go to state 26
    FIM             shift and go to state 27


state 17

    (18) initial -> PARA VARID EM . RANGE FAZER INST FIMPARA FIM

    RANGE           shift and go to state 28


state 18

    (4) comando -> ESCREVE lista_strings FIM .

    $end            reduce using rule 4 (comando -> ESCREVE lista_strings FIM .)
    FIMPARA         reduce using rule 4 (comando -> ESCREVE lista_strings FIM .)


state 19

    (5) lista_strings -> lista_strings SEPARADOR . E
    (6) lista_strings -> lista_strings SEPARADOR . NUM
    (7) lista_strings -> lista_strings SEPARADOR . STRING
    (8) E -> . E + E
    (9) E -> . E - E
    (10) E -> . E * E
    (14) E -> . - E
    (15) E -> . ( E )
    (16) E -> . NUM
    (17) E -> . VARID

    NUM             shift and go to state 30
    STRING          shift and go to state 31
    -               shift and go to state 13
    (               shift and go to state 14
    VARID           shift and go to state 15

    E                              shift and go to state 29

state 20

    (8) E -> E + . E
    (8) E -> . E + E
    (9) E -> . E - E
    (10) E -> . E * E
    (14) E -> . - E
    (15) E -> . ( E )
    (16) E -> . NUM
    (17) E -> . VARID

    -               shift and go to state 13
    (               shift and go to state 14
    NUM             shift and go to state 24
    VARID           shift and go to state 15

    E                              shift and go to state 32

state 21

    (9) E -> E - . E
    (8) E -> . E + E
    (9) E -> . E - E
    (10) E -> . E * E
    (14) E -> . - E
    (15) E -> . ( E )
    (16) E -> . NUM
    (17) E -> . VARID

    -               shift and go to state 13
    (               shift and go to state 14
    NUM             shift and go to state 24
    VARID           shift and go to state 15

    E                              shift and go to state 33

state 22

    (10) E -> E * . E
    (8) E -> . E + E
    (9) E -> . E - E
    (10) E -> . E * E
    (14) E -> . - E
    (15) E -> . ( E )
    (16) E -> . NUM
    (17) E -> . VARID

    -               shift and go to state 13
    (               shift and go to state 14
    NUM             shift and go to state 24
    VARID           shift and go to state 15

    E                              shift and go to state 34

state 23

    (14) E -> - E .
    (8) E -> E . + E
    (9) E -> E . - E
    (10) E -> E . * E

    +               reduce using rule 14 (E -> - E .)
    -               reduce using rule 14 (E -> - E .)
    *               reduce using rule 14 (E -> - E .)
    FIM             reduce using rule 14 (E -> - E .)
    SEPARADOR       reduce using rule 14 (E -> - E .)
    )               reduce using rule 14 (E -> - E .)

  ! +               [ shift and go to state 20 ]
  ! -               [ shift and go to state 21 ]
  ! *               [ shift and go to state 22 ]


state 24

    (16) E -> NUM .

    +               reduce using rule 16 (E -> NUM .)
    -               reduce using rule 16 (E -> NUM .)
    *               reduce using rule 16 (E -> NUM .)
    FIM             reduce using rule 16 (E -> NUM .)
    SEPARADOR       reduce using rule 16 (E -> NUM .)
    )               reduce using rule 16 (E -> NUM .)


state 25

    (15) E -> ( E . )
    (8) E -> E . + E
    (9) E -> E . - E
    (10) E -> E . * E

    )               shift and go to state 35
    +               shift and go to state 20
    -               shift and go to state 21
    *               shift and go to state 22


state 26

    (21) assign -> VAR VARID = . E FIM
    (8) E -> . E + E
    (9) E -> . E - E
    (10) E -> . E * E
    (14) E -> . - E
    (15) E -> . ( E )
    (16) E -> . NUM
    (17) E -> . VARID

    -               shift and go to state 13
    (               shift and go to state 14
    NUM             shift and go to state 24
    VARID           shift and go to state 15

    E                              shift and go to state 36

state 27

    (20) declare_var -> VAR VARID FIM .

    $end            reduce using rule 20 (declare_var -> VAR VARID FIM .)
    FIMPARA         reduce using rule 20 (declare_var -> VAR VARID FIM .)


state 28

    (18) initial -> PARA VARID EM RANGE . FAZER INST FIMPARA FIM

    FAZER           shift and go to state 37


state 29

    (5) lista_strings -> lista_strings SEPARADOR E .
    (8) E -> E . + E
    (9) E -> E . - E
    (10) E -> E . * E

    FIM             reduce using rule 5 (lista_strings -> lista_strings SEPARADOR E .)
    SEPARADOR       reduce using rule 5 (lista_strings -> lista_strings SEPARADOR E .)
    +               shift and go to state 20
    -               shift and go to state 21
    *               shift and go to state 22


state 30

    (6) lista_strings -> lista_strings SEPARADOR NUM .
    (16) E -> NUM .

  ! reduce/reduce conflict for FIM resolved using rule 6 (lista_strings -> lista_strings SEPARADOR NUM .)
  ! reduce/reduce conflict for SEPARADOR resolved using rule 6 (lista_strings -> lista_strings SEPARADOR NUM .)
    FIM             reduce using rule 6 (lista_strings -> lista_strings SEPARADOR NUM .)
    SEPARADOR       reduce using rule 6 (lista_strings -> lista_strings SEPARADOR NUM .)
    +               reduce using rule 16 (E -> NUM .)
    -               reduce using rule 16 (E -> NUM .)
    *               reduce using rule 16 (E -> NUM .)

  ! FIM             [ reduce using rule 16 (E -> NUM .) ]
  ! SEPARADOR       [ reduce using rule 16 (E -> NUM .) ]


state 31

    (7) lista_strings -> lista_strings SEPARADOR STRING .

    FIM             reduce using rule 7 (lista_strings -> lista_strings SEPARADOR STRING .)
    SEPARADOR       reduce using rule 7 (lista_strings -> lista_strings SEPARADOR STRING .)


state 32

    (8) E -> E + E .
    (8) E -> E . + E
    (9) E -> E . - E
    (10) E -> E . * E

    +               reduce using rule 8 (E -> E + E .)
    -               reduce using rule 8 (E -> E + E .)
    FIM             reduce using rule 8 (E -> E + E .)
    SEPARADOR       reduce using rule 8 (E -> E + E .)
    )               reduce using rule 8 (E -> E + E .)
    *               shift and go to state 22

  ! *               [ reduce using rule 8 (E -> E + E .) ]
  ! +               [ shift and go to state 20 ]
  ! -               [ shift and go to state 21 ]


state 33

    (9) E -> E - E .
    (8) E -> E . + E
    (9) E -> E . - E
    (10) E -> E . * E

    +               reduce using rule 9 (E -> E - E .)
    -               reduce using rule 9 (E -> E - E .)
    FIM             reduce using rule 9 (E -> E - E .)
    SEPARADOR       reduce using rule 9 (E -> E - E .)
    )               reduce using rule 9 (E -> E - E .)
    *               shift and go to state 22

  ! *               [ reduce using rule 9 (E -> E - E .) ]
  ! +               [ shift and go to state 20 ]
  ! -               [ shift and go to state 21 ]


state 34

    (10) E -> E * E .
    (8) E -> E . + E
    (9) E -> E . - E
    (10) E -> E . * E

    +               reduce using rule 10 (E -> E * E .)
    -               reduce using rule 10 (E -> E * E .)
    *               reduce using rule 10 (E -> E * E .)
    FIM             reduce using rule 10 (E -> E * E .)
    SEPARADOR       reduce using rule 10 (E -> E * E .)
    )               reduce using rule 10 (E -> E * E .)

  ! +               [ shift and go to state 20 ]
  ! -               [ shift and go to state 21 ]
  ! *               [ shift and go to state 22 ]


state 35

    (15) E -> ( E ) .

    +               reduce using rule 15 (E -> ( E ) .)
    -               reduce using rule 15 (E -> ( E ) .)
    *               reduce using rule 15 (E -> ( E ) .)
    FIM             reduce using rule 15 (E -> ( E ) .)
    SEPARADOR       reduce using rule 15 (E -> ( E ) .)
    )               reduce using rule 15 (E -> ( E ) .)


state 36

    (21) assign -> VAR VARID = E . FIM
    (8) E -> E . + E
    (9) E -> E . - E
    (10) E -> E . * E

    FIM             shift and go to state 38
    +               shift and go to state 20
    -               shift and go to state 21
    *               shift and go to state 22


state 37

    (18) initial -> PARA VARID EM RANGE FAZER . INST FIMPARA FIM
    (19) INST -> . initial
    (1) initial -> . comando
    (2) initial -> . assign
    (3) initial -> . declare_var
    (18) initial -> . PARA VARID EM RANGE FAZER INST FIMPARA FIM
    (4) comando -> . ESCREVE lista_strings FIM
    (21) assign -> . VAR VARID = E FIM
    (20) declare_var -> . VAR VARID FIM

    PARA            shift and go to state 5
    ESCREVE         shift and go to state 6
    VAR             shift and go to state 7

    INST                           shift and go to state 39
    initial                        shift and go to state 40
    comando                        shift and go to state 2
    assign                         shift and go to state 3
    declare_var                    shift and go to state 4

state 38

    (21) assign -> VAR VARID = E FIM .

    $end            reduce using rule 21 (assign -> VAR VARID = E FIM .)
    FIMPARA         reduce using rule 21 (assign -> VAR VARID = E FIM .)


state 39

    (18) initial -> PARA VARID EM RANGE FAZER INST . FIMPARA FIM

    FIMPARA         shift and go to state 41


state 40

    (19) INST -> initial .

    FIMPARA         reduce using rule 19 (INST -> initial .)


state 41

    (18) initial -> PARA VARID EM RANGE FAZER INST FIMPARA . FIM

    FIM             shift and go to state 42


state 42

    (18) initial -> PARA VARID EM RANGE FAZER INST FIMPARA FIM .

    $end            reduce using rule 18 (initial -> PARA VARID EM RANGE FAZER INST FIMPARA FIM .)
    FIMPARA         reduce using rule 18 (initial -> PARA VARID EM RANGE FAZER INST FIMPARA FIM .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 11 resolved using rule (lista_strings -> NUM)
WARNING: rejected rule (E -> NUM) in state 11
WARNING: reduce/reduce conflict in state 30 resolved using rule (lista_strings -> lista_strings SEPARADOR NUM)
WARNING: rejected rule (E -> NUM) in state 30
